# instagram_api

./: pyproject.toml
src/instagram_api/: main.py
